@@ -586,5 +586,99 @@ namespace DTTool
             OutputBox.AppendText("\n----------------------------------------------------------------------------------------------------------------------------\n");
             OutputBox.ScrollToEnd();
         }
+
+        private void MasterSearchButton_Click(object sender, RoutedEventArgs e)
+        {
+            if (IsTextInUserBox())
+            {
+                var SearchObject = UserTextbox.Text.Trim();
+                OutputBox.AppendText("Searching for " + SearchObject + "\n\n");
+                System.Windows.Clipboard.SetText(SearchObject);
+                UserTextbox.Clear();
+
+                // Search under URMC umbrella
+                DirectoryEntry entry = new DirectoryEntry("LDAP://urmc-sh.rochester.edu");
+                DirectorySearcher searcher = new DirectorySearcher(entry);
+
+                searcher.Filter = $"(&(objectClass=*)(cn={SearchObject}*))";
+                SearchResultCollection Result = searcher.FindAll();
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(urid={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(mail={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(samaccountname={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(name={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    OutputBox.AppendText("URMC: No object found\n");
+                }
+                else
+                {
+
+                    foreach (SearchResult result in Result)
+                    {
+                        OutputBox.AppendText("URMC: " + result.Properties["cn"][0].ToString() + "\t\t" + result.Properties["objectclass"][1] + '\n');
+                    }
+                }
+
+                // Search under UR umbrella
+                entry = new DirectoryEntry("LDAP://ur.rochester.edu");
+                searcher = new DirectorySearcher(entry);
+
+                searcher.Filter = $"(&(objectClass=*)(cn={SearchObject}))";
+                Result = searcher.FindAll();
+
+                searcher.Filter = $"(&(objectClass=*)(cn={SearchObject}*))";
+                Result = searcher.FindAll();
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(urid={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(mail={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(samaccountname={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    searcher.Filter = $"(&(objectClass=*)(name={SearchObject}*))";
+                    Result = searcher.FindAll();
+                }
+                if (Result.Count == 0)
+                {
+                    OutputBox.AppendText("UR: No object found\n");
+                }
+                else
+                {
+
+                    foreach (SearchResult result in Result)
+                    {
+                        OutputBox.AppendText("UR: " + result.Properties["cn"][0].ToString() + "\t\t" + result.Properties["objectclass"][1] + '\n');
+                    }
+                }
+            }
+            OutputBox.AppendText("\n----------------------------------------------------------------------------------------------------------------------------\n");
+            OutputBox.ScrollToEnd();
+        }
     }
 }
